# reaper-ac

./: .gitattributes  .gitignore  CI.md  CONTRIBUTING.md  README.md  SECURITY.md  build.gradle.kts  cliff.toml  gradle.properties  libs.versions.toml  settings.gradle.kts  testlibs.versions.toml
.github/: codeql-config.yml
PACKET-EVENTS/: testlibs.versions.toml
anticheat-core/: Cargo.toml
anticheat-core/benches/: scoring_bench.rs
anticheat-core/src/: lib.rs  main.rs  schema.rs  scoring.rs  server.rs
anticheat-core/src/checks/: combat.rs  interaction.rs  mod.rs  movement.rs
api/: build.gradle.kts
buildSrc/: build.gradle.kts
bukkit/: build.gradle.kts
bungeecord/: gradle.properties
common/: build.gradle.kts
fabric/: README-26.1-dependencies.md  build.gradle.kts  gradle.properties
grim-api/: README.md  build.gradle.kts
grim-fabric-common/: build.gradle.kts
grim-fabric-intermediary/: build.gradle.kts
grim-fabric-official/: build.gradle.kts
packet-events/: .gitignore  README.md  build.gradle.kts  libs.versions.toml  settings.gradle.kts
prebuilt/: grimac-fabric-2.3.74-691b93c.jar.sha256  grimac-fabric-2.3.74-ffe08c4.jar.sha256  reaperac-fabric-2.3.74-26.2-8c74971.jar.sha256  reaperac-fabric-2.3.74-26.2-8c74971.zip.sha256  reaperac-fabric-2.3.74-26.2-b567b7e.jar.sha256  reaperac-fabric-2.3.74-26.2-b567b7e.zip.sha256  reaperac-fabric-2.3.74-26.2-e6c7f97.jar.sha256  reaperac-fabric-2.3.74-26.2-e6c7f97.zip.sha256  reaperac-fabric-2.3.74-bc74903.jar.sha256  reaperac-fabric-2.3.74-feat_reaperac-fabric-identity-rename-00d6263.jar.sha256  (+2 more)
(+2711 files in other folders)
